--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "optionalDependencies": {
     "bufferutil": "^4.0.3",
     "utf-8-validate": "^5.0.4"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
